// Copyright 2018 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Schemas for service configs.

syntax = "proto3";

package buildbucket;

import "go.chromium.org/luci/buildbucket/proto/project_config.proto";

option go_package = "go.chromium.org/luci/buildbucket/proto;buildbucketpb";

// Schema of settings.cfg file, a service config.
message SettingsCfg {
  // Swarmbucket settings.
  SwarmingSettings swarming = 1;
  LogDogSettings logdog = 2;

  // List of Gerrit hosts to force git authentication for.
  //
  // By default public hosts are accessed anonymously, and the anonymous access
  // has very low quota. Context needs to know all such hostnames in advance to
  // be able to force authenticated access to them.
  repeated string known_public_gerrit_hosts = 3;
}

// Swarmbucket settings.
message SwarmingSettings {
  reserved 1; // default_hostname
  // Swarmbucket build URLs will point to this Milo instance.
  string milo_hostname = 2;
  // Default value of swarming.task_template_canary_percentage field in
  // cr-buildbucket.cfg files.
  int32 default_task_template_canary_percentage = 3;

  // These caches are available to all builders implicitly.
  // A builder may override a cache specified here.
  repeated Builder.CacheEntry global_caches = 4;
}

message LogDogSettings {
  // Hostname of the LogDog instance to use, e.g. "logs.chromium.org".
  string hostname = 1;
}